// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyboardIcon renders correctly when not visible 1`] = `
<View
  pointerEvents="none"
  style={
    Array [
      undefined,
      Object {
        "opacity": 0,
      },
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Image
      source={1}
      style={
        Object {
          "height": 34,
          "width": 27,
        }
      }
    />
  </View>
</View>
`;

exports[`KeyboardIcon renders correctly when visible 1`] = `
<View
  pointerEvents="auto"
  style={
    Array [
      undefined,
      Object {
        "opacity": 1,
      },
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Image
      source={1}
      style={
        Object {
          "height": 34,
          "width": 27,
        }
      }
    />
  </View>
</View>
`;
